--- a/notes/s3.md
+++ b/notes/s3.md
@@ -1,2 +1,5 @@
-### Access Control List
+## Access Control List
 Within Amazon S3, you can use ACLs to give read or write access on buckets or objects to groups of users. With ACLs, you can only grant other AWS accounts (not specific users) access to your Amazon S3 resources
+
+## Versioning
+Once you version-enable a bucket, it can never return to an unversioned state. Versioning can only be suspended once it has been enabled.
