update notes and images

--- a/notes/s3.md
+++ b/notes/s3.md
@@ -1,5 +1,8 @@
-## Access Control List
+## 1. Access Control List
 Within Amazon S3, you can use ACLs to give read or write access on buckets or objects to groups of users. With ACLs, you can only grant other AWS accounts (not specific users) access to your Amazon S3 resources
 
-## Versioning
+## 2. Versioning
 Once you version-enable a bucket, it can never return to an unversioned state. Versioning can only be suspended once it has been enabled.
+
+## 3. S3 owner
+By default, an S3 object is owned by the AWS account that uploaded it. This is true even when the bucket is owned by another account. Because the Amazon Redshift data files from the UNLOAD command were put into your bucket by another account, you (the bucket owner) don't have default permission to access those files.
