--- a/notes/s3.md
+++ b/notes/s3.md
@@ -6,3 +6,6 @@ Once you version-enable a bucket, it can never return to an unversioned state. V
 
 ## 3. S3 owner
 By default, an S3 object is owned by the AWS account that uploaded it. This is true even when the bucket is owned by another account. Because the Amazon Redshift data files from the UNLOAD command were put into your bucket by another account, you (the bucket owner) don't have default permission to access those files.
+
+## Standard-IA Storage
+The Standard–IA storage class reduces storage costs for files that are not accessed every day. It does this without sacrificing the high availability, high durability, elasticity, and POSIX file system access that Amazon EFS provides. AWS recommends Standard-IA storage if you need your full dataset to be readily accessible and want to automatically save on storage costs for files that are less frequently accessed.
