update more question

--- a/questions/s3.md
+++ b/questions/s3.md
@@ -17,6 +17,22 @@ AWS CloudTrail logs provide a record of actions taken by a user, role, or an AWS
 
 For this scenario, you can use CloudTrail and the Server Access Logging feature of Amazon S3. However, it is mentioned in the scenario that they need detailed information about every access request sent to the S3 bucket including the referrer and turn-around time information. These two records are not available in CloudTrail.
 
-=====================>
+==============================>
+
+**Question**
+
+A tech company that you are working for has undertaken a Total Cost Of Ownership (TCO) analysis evaluating the use of Amazon S3 versus acquiring more storage hardware. The result was that all 1200 employees would be granted access to use Amazon S3 for the storage of their personal documents.
+
+Which of the following will you need to consider so you can set up a solution that incorporates a single sign-on feature from your corporate AD or LDAP directory and also restricts access for each individual user to a designated user folder in an S3 bucket? (Select TWO.)
+
+A. Use 3rd party Single Sign-On solutions such as Atlassian Crowd, OKTA, OneLogin and many others.
+
+B. Set up a matching IAM user for each of the 1200 users in your corporate directory that needs access to a folder in the S3 bucket.
+
+C. Map each individual user to a designated user folder in S3 using Amazon WorkDocs to access their personal documents.
+
+**D. Configure an IAM role and an IAM Policy to access the bucket.**
+
+**E. Set up a Federation proxy or an Identity provider, and use AWS Security Token Service to generate temporary tokens.**
 
 
