update more questions

--- a/questions/s3.md
+++ b/questions/s3.md
@@ -35,4 +35,20 @@ C. Map each individual user to a designated user folder in S3 using Amazon WorkD
 
 **E. Set up a Federation proxy or an Identity provider, and use AWS Security Token Service to generate temporary tokens.**
 
+==============================>
+
+A company is generating confidential data that is saved on their on-premises data center. As a backup solution, the company wants to upload their data to an Amazon S3 bucket. In compliance with its internal security mandate, the encryption of the data must be done before sending it to Amazon S3. The company must spend time managing and rotating the encryption keys as well as controlling who can access those keys.
+
+Which of the following methods can achieve this requirement? (Select TWO.)
+
+A. Set up Server-Side Encryption (SSE) with EC2 key pair.
+
+B. Set up Server-Side Encryption with keys stored in a separate S3 bucket.
+
+**C. Set up Client-Side Encryption with a customer master key stored in AWS Key Management Service (AWS KMS).**
+
+D. Set up Client-Side Encryption with Amazon S3 managed encryption keys.
+
+**E. Set up Client-Side Encryption using a client-side master key.**
+
 
