update all document and questions

--- a/questions/s3.md
+++ b/questions/s3.md
@@ -51,4 +51,18 @@ D. Set up Client-Side Encryption with Amazon S3 managed encryption keys.
 
 **E. Set up Client-Side Encryption using a client-side master key.**
 
+==============================>
 
+**Question**
+
+A financial firm is designing an application architecture for its online trading platform that must have high availability and fault tolerance. Their Solutions Architect configured the application to use an Amazon S3 bucket located in the us-east-1 region to store large amounts of intraday financial data. The stored financial data in the bucket must not be affected even if there is an outage in one of the Availability Zones or if there’s a regional service failure.
+
+What should the Architect do to avoid any costly service disruptions and ensure data durability?
+
+A. Create a new S3 bucket in another region and configure Cross-Account Access to the bucket located in us-east-1.
+
+B. Create a Lifecycle Policy to regularly backup the S3 bucket to Amazon Glacier.
+
+**C. Enable Cross-Region Replication.**
+
+D. Copy the S3 bucket to an EBS-backed EC2 instance.
